--- a/study-webpack/package.json
+++ b/study-webpack/package.json
@@ -6,8 +6,12 @@
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.4",
     "css-loader": "^6.7.4",
+    "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
