--- a/webpack-guide/package.json
+++ b/webpack-guide/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "start": "webpack serve --open",
+    "server":"node server.js",
     "build": "webpack"
   },
   "devDependencies": {
     "css-loader": "^6.7.4",
     "csv-loader": "^3.0.5",
+    "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.1",
     "json5": "^2.2.3",
     "style-loader": "^3.3.3",
     "toml": "^3.0.0",
     "webpack": "^5.83.1",
     "webpack-cli": "^5.1.1",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-dev-server": "^4.15.0",
     "xml-loader": "^1.2.1",
     "yamljs": "^0.3.0"
   },
